examples/test/testpolicy7080.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7080
  namespace: namespace416
spec:
  podSelector:
    matchLabels:
      key21: value17
      key17: value39
      key8: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value8
          key5: value18
      podSelector:
        matchLabels:
          key23: value24
          key25: value27
